Set header's margin to -30px to get rid of white space at top of screen. Fixed footer's container-fluid so its width would not screw up the entire rest of the site Set section x-margins to 0.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,6 +16,13 @@ body {
 	font-family: 'Lato', sans-serif, arial;
 	font-size: 20px;
 	font-weight: 300;
+	margin: 0;
+}
+
+header {
+	margin-top: -30px;
+	/*margin-left: 0;
+	margin-right: 0;*/
 }
 
 /*.main-container {
@@ -37,6 +44,8 @@ h1 {
 
 section {
 	min-height: 100vh;
+	margin-left: 0;
+	margin-right: 0;
 	/*position: relative;*/  /* For the purposes of absolute-positioning the social icons. */
 }
 
